--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context="com.example.fengxinlin.mytodo.MainActivity">
 
     <ListView
@@ -14,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@color/list_divider_color"
-        android:dividerHeight="@dimen/list_divider_height"
-        />
+        android:dividerHeight="@dimen/list_divider_height" />
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_height="wrap_content"
